# mha-recruitment-platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PACKAGE_MANIFEST.md  README.md  docker-compose.yml
backend/: .env.example  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/apps/accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  tokens.py
backend/apps/accounts/api/: urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_uniq_user_email_ci.py
backend/apps/accounts/services/: __init__.py  email_service.py  (+1 more)
backend/apps/analytics/: admin.py  models.py
backend/apps/applications/: admin.py  employer_serializers.py  exceptions.py  models.py  permissions.py  selectors.py  serializers.py
backend/apps/audit/: admin.py  models.py  services.py
backend/apps/candidates/: admin.py  models.py  selectors.py  serializers.py  storage.py
backend/apps/employers/: admin.py  models.py  serializers.py
backend/apps/jobs/: admin.py  models.py  serializers.py
backend/apps/matching/: admin.py  ai.py  engine.py  models.py  resume_keywords.py  serializers.py  services.py
backend/apps/reviews/: admin.py  apps.py  models.py  services.py
backend/apps/support/: admin.py  models.py  serializers.py  storage.py
backend/config/: db_seed.py  env.py  exceptions.py  health.py  middleware.py  pagination.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/config/tests/: test_health.py  test_throttle_config.py
backend/data/seed/: database.json  manifest.json
(+460 files in other folders)
