[project]
name = "mha-jobs-backend"
version = "0.1.0"
description = "MHA Consultancy recruitment platform — Django + DRF backend"
requires-python = ">=3.12,<3.15"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "C4"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = "-q"
testpaths = ["apps", "config"]
